Incompatible change from 1.0:
  Semantics of group parameter was changed to adhere to the semantics of edgeR.
  Now you should specify the group each sample belongs to.
  ForgenerateSimulationData(), replicates parameter is used to
  distiguish different semantics. This parameter accepts the number of replicates
  in each group.