@@ -84,9 +84,9 @@ The following object is masked from 'package:edgeR':
 +   A1 = hypoData[,1], A2 = hypoData[,2], A3 = hypoData[,3],
 +   B1 = hypoData[,4], B2 = hypoData[,5], B3 = hypoData[,6])
 > tccdata=new("TCC",df,c(1, 1, 1, 2, 2, 2))
-> head(tccdata$names)
+> head(tccdata$gene_id)
 [1] "agene_1" "agene_2" "agene_3" "agene_4" "agene_5" "agene_6"
 > 
 > proc.time()
    user  system elapsed 
-  3.986   0.073   4.062 
+  3.944   0.072   4.023 
