@@ -85,9 +85,9 @@ The following object is masked from 'package:edgeR':
 +   B1 = hypoData[,4], B2 = hypoData[,5], B3 = hypoData[,6])
 > m<-cbind(df[[1]], df[[2]], df[[3]],df[[4]],df[[5]],df[[6]])
 > tccdata=new("TCC", m, c(1, 1, 1, 2, 2, 2))
-> head(tccdata$names)
+> head(tccdata$gene_id)
 [1] "gene_1" "gene_2" "gene_3" "gene_4" "gene_5" "gene_6"
 > 
 > proc.time()
    user  system elapsed 
-  3.997   0.057   4.055 
+  3.881   0.087   3.980 
